# equidistant-ml

./: .env.example  .gitattributes  .gitignore  Makefile  Procfile  README.md  app.json  dvc.yaml  params.yaml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: package.on-dispatch.yml  pythonpackage.yml
app/: app.py
docs/: coverage-expansion.md  future-personalised-recommendations.md
equidistant_ml/: __init__.py  app.py  config.py  utils.py
equidistant_ml/base_grid/: __init__.py
equidistant_ml/etl/: get_lattice_data.py
equidistant_ml/inference/: gaussian.py  linear.py  predict.py
equidistant_ml/noise/: generator.py  generator2.py
equidistant_ml/surfaces/: __init__.py  config.py  export_atlas.py  features.py  geo.py  grid.py  hillclimb.py  models.py  pipeline.py  predict.py  transport_graph.py  traveltime.py
frontend/: .env.example  index.html  package-lock.json  package.json  sites.wrangler.json  vite.config.ts  vitest.config.ts
frontend/.openai/: hosting.json
frontend/public/map/: tube-lines.json
frontend/public/model/: atlas.json  graph.u8  model.u8
frontend/src/: App.tsx  DeveloperMode.tsx  MapView.tsx  ProductMode.tsx  VenueRecommendations.test.tsx  VenueRecommendations.tsx  analytics.test.ts  analytics.ts  main.tsx  styles.css  types.ts
frontend/src/lib/: atlas.test.ts  atlas.ts  locations.test.ts  locations.ts  suggestions.test.ts  suggestions.ts
frontend/src/state/: AppStateContext.test.tsx  AppStateContext.tsx
frontend/src/test/: setup.ts
frontend/tests/: worker.test.mjs
frontend/worker/: index.js
metrics/: model.json
scripts/: export_tube_overlay.py
tests/: __init__.py  conftest.py  test_app.py  test_equidistant_ml.py  test_etl.py  test_surfaces.py  test_tube_overlay.py
tests/test_payloads/: 1.json  2.json
