[project]
name = "equidistant-ml"
version = "0.1.1"
description = "Contains ML for Equidistant, an app to estimate journey times."
readme = "README.md"
requires-python = ">=3.8,<3.9"
license = { text = "Not open source" }
authors = [
    { name = "Ben" },
]
keywords = [
    "journey-time",
    "geospatial",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "dvc>=2.6.3,<3.0.0",
    "fastapi>=0.70.1,<0.71.0",
    "fastparquet>=0.7.1,<0.8.0",
    "gmaps>=0.9.0,<0.10.0",
    "googlemaps>=4.5.3,<5.0.0",
    "haversine>=2.5.1,<3.0.0",
    "loguru>=0.5.3,<0.6.0",
    "matplotlib>=3.4.3,<4.0.0",
    "openpyxl>=3.0.7,<4.0.0",
    "pandas>=1.3.2,<2.0.0",
    "pyprojroot>=0.2.0,<0.3.0",
    "python-dotenv>=0.19.0,<0.20.0",
    "requests-cache>=0.7.4,<0.8.0",
    "scipy>=1.7.1,<2.0.0",
    "tqdm>=4.62.1,<5.0.0",
    "uvicorn>=0.16.0,<0.17.0",
]

[project.urls]
Homepage = "https://github.com/btjones-me/equidistant-ml"
Repository = "https://github.com/btjones-me/equidistant-ml"

[project.optional-dependencies]
dev = [
    "assertpy>=1.0,<2.0",
    "bandit>=1.6.2,<2.0.0",
    "black>=19.10b0,<20.0",
    "coverage>=5.1,<6.0",
    "flake8>=3.8.3,<4.0.0",
    "isort>=5.1.0,<6.0.0",
    "liccheck>=0.4.7,<0.5.0",
    "mypy>=0.782,<0.783",
    "pytest>=6.2.4,<7.0.0",
    "pytest-commander>=2.7.0,<3.0.0",
    "pytest-runner>=5.2,<6.0.0",
    "toml>=0.10.1,<0.11.0",
    "tox>=3.15.2,<4.0.0",
    "tox-gh-actions>=1.2.0,<2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.hatch.build.targets.wheel]
packages = ["equidistant_ml"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
