[project]
name = "equidistant-ml"
version = "0.1.1"
description = "Contains ML for Equidistant, an app to estimate journey times."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Not open source" }
authors = [
    { name = "Ben" },
]
keywords = [
    "journey-time",
    "geospatial",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "dvc>=3.60.0,<4.0.0",
    "fastapi>=0.115.0,<0.116.0",
    "haversine>=2.5.1,<3.0.0",
    "joblib>=1.4.2,<2.0.0",
    "lightgbm>=4.5.0,<5.0.0",
    "loguru>=0.7.2,<1.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "numpy>=2.1.0,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "pandas>=2.2.3,<3.0.0",
    "pyarrow>=17.0.0,<23.0.0",
    "pydantic>=2.9.0,<3.0.0",
    "pyprojroot>=0.2.0,<0.3.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "requests>=2.32.3,<3.0.0",
    "requests-cache>=1.2.1,<2.0.0",
    "ruamel-yaml-clib>=0.2.12,<0.3.0",
    "scikit-learn>=1.6.0,<2.0.0",
    "scipy>=1.14.0,<2.0.0",
    "tqdm>=4.62.1,<5.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/btjones-me/equidistant-ml"
Repository = "https://github.com/btjones-me/equidistant-ml"

[project.optional-dependencies]
dev = [
    "assertpy>=1.0,<2.0",
    "bandit>=1.7.10,<2.0.0",
    "black>=24.10.0,<26.0",
    "coverage>=7.6.0,<8.0.0",
    "flake8>=7.1.0,<8.0.0",
    "httpx>=0.27.0,<1.0.0",
    "isort>=5.13.0,<6.0.0",
    "liccheck>=0.9.2,<1.0.0",
    "mypy>=1.11.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "toml>=0.10.2,<1.0.0",
    "tox>=4.20.0,<5.0.0",
    "tox-gh-actions>=3.2.0,<4.0.0",
    "types-pyyaml>=6.0.12,<7.0.0",
    "types-requests>=2.32.0,<3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.hatch.build.targets.wheel]
packages = ["equidistant_ml"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
